--- a/.eslintrc
+++ b/.eslintrc
@@ -66,6 +66,7 @@
     "react/jsx-filename-extension": 0,
     "react/destructuring-assignment": 0,
     "import/no-extraneous-dependencies": 0,
+    "react/function-component-definition": 0,
     "react/jsx-key": 1,
     "react-hooks/rules-of-hooks": 2,
     "no-unused-vars": [
